# Bus-e-Paper

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  sdkconfig
main/: CMakeLists.txt  main.c
main/include/: bus.h  draw.c  draw.h  epaper.c  epaper.h  paint.h  wifi.c  wifi.h
main/src/: bus.c  draw.c  epaper.c  paint.c  wifi.c
